<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_16"
    tools:context=".view.ui.WeatherActivity">

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:src="@drawable/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_city_name"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_8"
        android:fontFamily="@font/montserrat_medium"
        android:text="Hello World!"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/icon_location"
        app:layout_constraintEnd_toStartOf="@+id/box_language"
        app:layout_constraintStart_toEndOf="@+id/icon_location"
        app:layout_constraintTop_toTopOf="@+id/icon_location" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box_language"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_48"
        android:background="@drawable/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_8"
            android:text="@string/pt"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/icon_thermostat"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/thermostat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_location" />

    <TextView
        android:id="@+id/text_temp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_48"
        android:layout_marginStart="@dimen/size_8"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/icon_thermostat"
        app:layout_constraintStart_toEndOf="@+id/icon_thermostat"
        app:layout_constraintTop_toTopOf="@+id/icon_thermostat"
        tools:text="32" />

    <ImageView
        android:id="@+id/icon_condition_slug"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:layout_marginStart="@dimen/size_24"
        android:src="@drawable/clear_day"
        app:layout_constraintBottom_toBottomOf="@+id/text_temp"
        app:layout_constraintStart_toEndOf="@+id/text_temp"
        app:layout_constraintTop_toTopOf="@+id/text_temp" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:text="@string/next_days"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_thermostat" />

    <ImageView
        android:id="@+id/image_moon"
        android:layout_width="@dimen/size_48"
        android:layout_height="@dimen/size_48"
        android:layout_marginTop="@dimen/size_8"
        android:src="@drawable/new_moon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_description" />

    <TextView
        android:id="@+id/text_moon_phase"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8"
        android:text="@string/next_days"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_moon"
        app:layout_constraintStart_toEndOf="@+id/image_moon"
        app:layout_constraintTop_toTopOf="@+id/image_moon" />

    <TextView
        android:id="@+id/text_next_days"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        android:text="@string/next_days"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_moon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_next_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_next_days"
        tools:listitem="@layout/item_weather" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:text="@string/loading_text"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loading_request"
        app:layout_constraintStart_toStartOf="@+id/loading_request"
        app:layout_constraintTop_toBottomOf="@+id/loading_request" />
</androidx.constraintlayout.widget.ConstraintLayout>